[gd_scene load_steps=19 format=3 uid="uid://ex424qjj2be3"]

[ext_resource type="Script" uid="uid://b5dvvx5p3kq2g" path="res://Scripts/slime.gd" id="1_5gljc"]
[ext_resource type="Texture2D" uid="uid://cdyi0xpnhdbew" path="res://Sprites/characters/slime.png" id="1_jokqx"]
[ext_resource type="Script" uid="uid://bb2jhgt0uk7te" path="res://Scripts/slime_state_machine.gd" id="3_vblni"]
[ext_resource type="Script" uid="uid://bohona2q58fhi" path="res://Scripts/slime_state_idle.gd" id="4_e388w"]
[ext_resource type="Script" uid="uid://cuo1rq0p738w0" path="res://Scripts/slime_state_wander.gd" id="5_r4o34"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vblni"]
radius = 6.0

[sub_resource type="Animation" id="Animation_aiwxb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlimeSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_r4o34"]
resource_name = "attack_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlimeSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [42, 43, 44, 45, 46, 47]
}

[sub_resource type="Animation" id="Animation_y26kt"]
resource_name = "attack_side"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlimeSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [49, 50, 51, 52, 53, 54]
}

[sub_resource type="Animation" id="Animation_c7ij5"]
resource_name = "attack_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlimeSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [56, 57, 58, 59, 60, 61]
}

[sub_resource type="Animation" id="Animation_psnrq"]
resource_name = "death"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlimeSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [62, 63, 64, 65]
}

[sub_resource type="Animation" id="Animation_swwnm"]
resource_name = "idle_down"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlimeSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.19999999, 0.39999998, 0.5999999),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_paq7w"]
resource_name = "idle_side"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlimeSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_f4si1"]
resource_name = "idle_up"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlimeSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_5gljc"]
resource_name = "walk_down"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlimeSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [21, 22, 23, 24, 25, 26]
}

[sub_resource type="Animation" id="Animation_vblni"]
resource_name = "walk_side"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlimeSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 32, 33]
}

[sub_resource type="Animation" id="Animation_e388w"]
resource_name = "walk_up"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlimeSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [35, 36, 37, 38, 39, 40]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5gljc"]
_data = {
&"RESET": SubResource("Animation_aiwxb"),
&"attack_down": SubResource("Animation_r4o34"),
&"attack_side": SubResource("Animation_y26kt"),
&"attack_up": SubResource("Animation_c7ij5"),
&"death": SubResource("Animation_psnrq"),
&"idle_down": SubResource("Animation_swwnm"),
&"idle_side": SubResource("Animation_paq7w"),
&"idle_up": SubResource("Animation_f4si1"),
&"walk_down": SubResource("Animation_5gljc"),
&"walk_side": SubResource("Animation_vblni"),
&"walk_up": SubResource("Animation_e388w")
}

[node name="Slime" type="CharacterBody2D"]
collision_layer = 64
collision_mask = 129
script = ExtResource("1_5gljc")

[node name="SlimeSprite" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("1_jokqx")
hframes = 7
vframes = 13

[node name="SlimeCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_vblni")

[node name="SlimeAnimations" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_5gljc")
}
autoplay = "idle_down"

[node name="SlimeStateMachine" type="Node" parent="."]
script = ExtResource("3_vblni")

[node name="Idle" type="Node" parent="SlimeStateMachine" node_paths=PackedStringArray("after_idle_state")]
script = ExtResource("4_e388w")
after_idle_state = NodePath("../Wander")

[node name="Wander" type="Node" parent="SlimeStateMachine" node_paths=PackedStringArray("next_state")]
script = ExtResource("5_r4o34")
state_animation_duration = 0.6
next_state = NodePath("../Idle")
